[add] add reset password functionality
